src/flex/Moon.bnf
{
    parserClass = "com.github.moonbit.parser.MoonParser"
    parserUtilClass = "com.github.moonbit.psi.MoonParserExtension"

    extends = "com.github.moonbit.psi.AnyMoonNode"

    psiClassPrefix = "Moon"
    psiImplClassSuffix = "Node"
    psiPackage = "com.github.moonbit.psi"
    psiImplPackage = "com.github.moonbit.psi_node"

    elementTypeHolderClass = "com.github.moonbit.psi.MoonTypes"
    elementTypeClass = "com.github.moonbit.psi.MoonElementType"
    tokenTypeClass = "com.github.moonbit.psi.MoonTokenType"

    psiImplUtilClass = "com.github.moonbit.psi_node.MoonPsiExtension"

    tokens = [
        // comment
        COMMENT_DOCUMENT = "Comment Document"
        COMMENT_LINE = "Comment Line"
        COMMENT_BLOCK = "Comment Block"

        PARENTHESIS_L = '('
        PARENTHESIS_R = ')'
        BRACKET_L = '['
        BRACKET_R = ']'
        BRACE_L = '{'
        BRACE_R = '}'
    ]
}

// https://github.com/bytecodealliance/fluent/blob/master/spec/fluent.ebnf
moon ::= statements*
private statements ::= SEMICOLON
    | package
    | define-type
    | define-type-alias
	| declare-struct
	| declare-enum
	| declare-trait
	| declare-impl
	| let-statement
	| declare-function
	| declare-test
	| while-statement
	| for-statement
	| if-statement
	| guard-statement
	| try-statement
	| match-statement

// package wasi:blobstore@0.2.0-draft;
package ::= KW_PACKAGE package-name {
	pin = 1
//    mixin = "com.github.bytecodealliance.language.mixin.MixinPackage"
}

package-name ::= module-name (COLON module-name)* package-version?;
package-version ::= AT VERSION;

// =====================================================================================================================
append-derive ::= KW_DERIVE PARENTHESIS_L (namepath (COMMA namepath)*)? PARENTHESIS_R {
	//	mixin = "com.github.bytecodealliance.language.mixin.MixinDerive"
}
// =====================================================================================================================
declare-struct   ::= modifier* KW_STRUCT identifier declare-generic? struct-body append-derive? {
	pin = 2
//    mixin = "com.github.bytecodealliance.language.mixin.MixinRecord"
}
struct-body ::= BRACE_L struct-element* BRACE_R
private struct-element ::= COMMA
	| declare-field
	| declare-method
declare-field  ::= KW_MUTABLE? identifier type-hint {
//    mixin = "com.github.bytecodealliance.language.mixin.MixinField"
}
declare-method ::= identifier COLON declare-signature {
//	mixin = "com.github.bytecodealliance.language.mixin.MixinMethod"
}
// =====================================================================================================================
declare-enum ::= modifier* KW_ENUM identifier declare-generic? enum-body append-derive? {
	pin = 2
}
enum-body ::= BRACE_L enum-element* BRACE_R
private enum-element ::= COMMA
	| declare-variant
//	| declare-field
//	| declare-method

declare-variant ::= identifier declare-parameters?;

// =====================================================================================================================
define-type ::= modifier* KW_TYPE OP_ERROR? type-expression type-expression? append-derive? {
	pin = 2
}
define-type-alias ::= modifier* KW_TYPE_ALIAS type-expression OP_ASSIGN type-expression {
	pin = 2
}
type-hint ::= COLON type-expression;
return-type ::= OP_TO type-expression OP_ERROR? type-expression?;
// =====================================================================================================================

generic-call   ::= BRACKET_L (type-expression (COMMA type-expression)* COMMA?)? BRACKET_R;
// resource type-name { method: func() };
declare-trait  ::= modifier* KW_TRAIT identifier trait-body {
	pin = 2
//    mixin = "com.github.bytecodealliance.language.mixin.MixinResource"
}
trait-body ::= BRACE_L trait-element* BRACE_R;
private trait-element ::=
	declare-signature

// pub trait Compare: Eq {
//  compare(Self, Self) -> Int
//}
// to_bool(Self) -> Bool
declare-signature ::= modifier? identifier declare-generic? signature-parameter return-type? {

}
signature-parameter ::= PARENTHESIS_L (namepath (COMMA namepath)* COMMA?)? PARENTHESIS_R
signature-arguments ::= PARENTHESIS_L (identifier-free (COMMA identifier-free)* COMMA?)? PARENTHESIS_R
// pub impl Hash for Bool with hash(self) { self.to_int() }
// =====================================================================================================================
declare-impl ::= modifier* KW_IMPLEMENT declare-generic? namepath impl-for impl-with {
	pin = 2
}
impl-for   ::= KW_FOR identifier-free generic-call? {
	pin = 1
}
impl-with  ::= KW_WITH identifier-free signature-arguments return-type? function-body {
	pin = 1
}
// =====================================================================================================================
let-statement ::= modifier? KW_LET KW_MUTABLE? identifier type-hint? OP_ASSIGN term-expression {
	pin = 2
//    mixin = "com.github.bytecodealliance.language.mixin.MixinWorld"
}
// =====================================================================================================================
declare-function ::= modifier* function-extern? KW_FN function-name declare-generic? declare-parameters return-type? (function-body | function-inline) {
	pin = 4
//    mixin = "com.github.bytecodealliance.language.mixin.MixinInterface"
}
function-name   ::= (identifier-free NAME_JOIN)? identifier-free
function-extern ::= KW_EXTERN string-literal;
function-inline ::= OP_ASSIGN term-expression;

function-body  ::= BRACE_L function-element* BRACE_R {

}
private function-element ::= SEMICOLON
	| let-statement
	| declare-function
	| declare-test
	| while-statement
	| for-statement
	| try-statement
	| control-statement
	| term-expression
// =====================================================================================================================
declare-parameters ::= PARENTHESIS_L (parameter (COMMA parameter)* COMMA?)? PARENTHESIS_R
parameter ::= identifier (OP_REF|OP_THROW)? COLON type-expression (OP_ASSIGN term-expression)? {

}
control-statement ::=
	KW_RETURN term-expression?
  | KW_CONTINUE term-expression?
  | KW_BREAK term-expression?
  | KW_RAISE term-expression?

modifier ::=
	KW_PUBLIC (PARENTHESIS_L (KW_ALL|KW_OPEN) PARENTHESIS_R)?
  | KW_PRIVATE;
declare-generic ::= BRACKET_L (generic-item (COMMA generic-item)*)? BRACKET_R;
generic-item ::= identifier (COLON type-expression)?;
// =====================================================================================================================
lambda-function  ::= KW_FN closure-parameters? function-body {
//	pin = 1
}
closure-parameters ::= PARENTHESIS_L (identifier (COMMA identifier)* COMMA?)? PARENTHESIS_R
// =====================================================================================================================
declare-test ::= KW_TEST string-literal? function-body {
	pin = 1
//	extends = interface
//	mixin = "com.github.bytecodealliance.language.mixin.MixinInterface"
}


// exports: interface
// =====================================================================================================================
if-statement   ::= KW_IF then-statement else-if* else-statement? {
	pin = 1
}
then-statement ::= term-expression function-body {

}
else-if        ::= KW_ELSE KW_IF then-statement {
	pin = 2
}
else-statement ::= KW_ELSE function-body {
	pin = 1
}
// =====================================================================================================================
guard-statement ::= guard-let | guard-normal {

}
guard-let ::= KW_GUARD KW_LET identifier-free OP_ASSIGN term-expression else-statement? {
	pin = 2
}
guard-normal ::= KW_GUARD term-expression else-statement? {
	pin = 1
}
// =====================================================================================================================
while-statement ::= KW_WHILE term-expression function-body {
	pin = 1
}
for-in-statement ::= KW_FOR identifier KW_IN term-expression function-body;
for-statement  ::= for-in-statement | KW_FOR for-startup for-condition for-increment function-body;
for-startup    ::= term-expression SEMICOLON;
for-condition  ::= term-expression SEMICOLON;
for-increment  ::= term-expression;
// =====================================================================================================================
match-statement ::= KW_MATCH term-expression match-body {
	pin = 1
}
match-body ::= BRACE_L match-element* BRACE_R;
private match-element ::= match-variant
match-variant ::= identifier;
// =====================================================================================================================
try-statement  ::= try-expression catch-expression*;
try-expression   ::= KW_TRY function-body {
	pin = 1
}
catch-expression ::= KW_CATCH match-body {
	pin = 1
}
// =====================================================================================================================
term-expression ::= term-expression-item (term-infix term-expression-item)*;
term-expression-item ::= term-prefix* term-expression-atom term-suffix*;
term-expression-atom ::= PARENTHESIS_L term-expression PARENTHESIS_R
	| lambda-function
	| if-statement
	| guard-statement
	| dict-literal
	| list-literal
	| tuple-literal
	| string-literal
	| string-lines
	| char-literal
	| number-literal
	| AT identifier-free
	| identifier
term-prefix ::= OP_ADD | OP_SUB | OP_REF;
term-infix  ::= OP_ASSIGN
	| OP_ADD | OP_ADD_ASSIGN
	| OP_SUB | OP_SUB_ASSIGN
	| OP_MUL | OP_MUL_ASSIGN
	| OP_DIV | OP_DIV_ASSIGN
	| OP_MOD
	| OP_EQ | OP_NE
	| OP_LT | OP_LL | OP_LEQ
	| OP_GT | OP_GG | OP_GEQ
	| OP_OR | OP_BIT_OR
	| OP_AND | OP_BIT_AND
	| OP_XOR
	| OP_THEN
	| OP_SPREAD
	| OP_RANGE_TO
term-suffix   ::= OP_THROW
	| call-function
	| call-static
	| call-method
	| call-field
	| call-index
	| call-dict
	| call-slice
	| OP_REF
call-function ::= throwable? PARENTHESIS_L (term-expression (COMMA term-expression)* COMMA?)? PARENTHESIS_R;
throwable ::= OP_ERROR | OP_THROW;
call-dict     ::= NAME_JOIN dict-literal
call-static   ::= NAME_JOIN identifier-free call-function?
call-method   ::= DOT identifier-free call-function
call-field    ::= DOT identifier
call-index    ::= DOT INTEGER
call-slice    ::= BRACKET_L slice-term (COMMA slice-term)* BRACKET_R;
slice-term    ::= term-expression? COLON? term-expression? COLON? term-expression?
// =====================================================================================================================
type-expression ::= type-expression-item (type-infix type-expression-item)*;
type-expression-item ::= type-prefix* type-expression-atom type-suffix*;
type-expression-atom ::= PARENTHESIS_L type-expression PARENTHESIS_R
	| PARENTHESIS_L PARENTHESIS_R
	| namepath
type-prefix ::= OP_ADD;
type-infix  ::= OP_ADD | OP_TO;
type-suffix ::= generic-call | OP_THROW;
// =====================================================================================================================
dict-literal ::= BRACE_L (dict-term (COMMA dict-term)* COMMA?)? BRACE_R
dict-term ::= identifier (COLON term-expression)?;
// =====================================================================================================================
list-literal ::= BRACKET_L (list-term (COMMA list-term)* COMMA?)? BRACKET_R type-hint?
list-term ::= OP_SPREAD? term-expression;
// =====================================================================================================================
tuple-literal ::= PARENTHESIS_L PARENTHESIS_R
	| PARENTHESIS_L (tuple-term (COMMA tuple-term)* COMMA?)? PARENTHESIS_R
tuple-term ::= term-expression;


//   { array: self.array, start: self.start + start, end: self.start + end }
// =====================================================================================================================
char-literal   ::= identifier? char-syntax;
string-literal ::= identifier? string-syntax;
string-syntax  ::= DOUBLE_QUOTE_L STRING_TEXT+ DOUBLE_QUOTE_R;
char-syntax    ::= SINGLE_QUOTE_L STRING_TEXT+ SINGLE_QUOTE_R;
string-lines   ::= STRING_LINE+
number-literal ::= INTEGER | BYTES_HEX | BYTES_OCT | BYTES_BIN;



flags       ::= KW_FLAGS identifier BRACE_L (semantic-number (COMMA semantic-number)* COMMA?)? BRACE_R {
	pin = 1
//    mixin = "com.github.bytecodealliance.language.mixin.MixinFlags"
}


variant          ::= KW_VARIANT identifier BRACE_L (variant-item (COMMA variant-item)* COMMA?)? BRACE_R {
	pin = 1
//    mixin = "com.github.bytecodealliance.language.mixin.MixinVariant"
}
variant-item 	 ::= identifier (PARENTHESIS_L type-hint PARENTHESIS_R)? {
//    mixin = "com.github.bytecodealliance.language.mixin.MixinVariantItem"
}


/* Literals */

/* Identifier */
module-name         ::= SYMBOL | ESCAPED;
semantic-number     ::= SYMBOL | ESCAPED;
identifier          ::= SYMBOL | ESCAPED;
identifier-free     ::= SYMBOL | KW_TEST;

// @moonbitlang/core/byte.to_uint64
namepath       ::= AT identifier-free (OP_DIV identifier-free)* (DOT identifier-free)?
	| identifier;

// useless, but generating unused token
private resource-element ::=
    declare-method
  | constructor
  | SEMICOLON
  | HYPHEN
  | DOLLAR
  | OP_PATTERN_TO
