src/main/gen/com/github/moonbit/parser/MoonParser.java
// This is a generated file. Not intended for manual editing.
package com.github.moonbit.parser;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;

import static com.github.moonbit.psi.MoonTypes.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class MoonParser implements PsiParser, LightPsiParser {

    public ASTNode parse(IElementType t, PsiBuilder b) {
        parseLight(t, b);
        return b.getTreeBuilt();
    }

    public void parseLight(IElementType t, PsiBuilder b) {
        boolean r;
        b = adapt_builder_(t, b, this, null);
        Marker m = enter_section_(b, 0, _COLLAPSE_, null);
        r = parse_root_(t, b);
        exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
    }

    protected boolean parse_root_(IElementType t, PsiBuilder b) {
        return parse_root_(t, b, 0);
    }

    static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
        return moon(b, l + 1);
    }

    /* ********************************************************** */
    // KW_DERIVE PARENTHESIS_L (namepath (COMMA namepath)*)? PARENTHESIS_R {
    // 	//	mixin = "com.github.bytecodealliance.language.mixin.MixinDerive"
    // }
    public static boolean append_derive(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "append_derive")) return false;
        if (!nextTokenIs(b, KW_DERIVE)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeTokens(b, 0, KW_DERIVE, PARENTHESIS_L);
        r = r && append_derive_2(b, l + 1);
        r = r && consumeToken(b, PARENTHESIS_R);
        r = r && append_derive_4(b, l + 1);
        exit_section_(b, m, APPEND_DERIVE, r);
        return r;
    }

    // (namepath (COMMA namepath)*)?
    private static boolean append_derive_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "append_derive_2")) return false;
        append_derive_2_0(b, l + 1);
        return true;
    }

    // namepath (COMMA namepath)*
    private static boolean append_derive_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "append_derive_2_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = namepath(b, l + 1);
        r = r && append_derive_2_0_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (COMMA namepath)*
    private static boolean append_derive_2_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "append_derive_2_0_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!append_derive_2_0_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "append_derive_2_0_1", c)) break;
        }
        return true;
    }

    // COMMA namepath
    private static boolean append_derive_2_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "append_derive_2_0_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && namepath(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // {
    // 	//	mixin = "com.github.bytecodealliance.language.mixin.MixinDerive"
    // }
    private static boolean append_derive_4(PsiBuilder b, int l) {
        return true;
    }

    /* ********************************************************** */
    // NAME_JOIN dict-literal
    public static boolean call_dict(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_dict")) return false;
        if (!nextTokenIs(b, NAME_JOIN)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, NAME_JOIN);
        r = r && dict_literal(b, l + 1);
        exit_section_(b, m, CALL_DICT, r);
        return r;
    }

    /* ********************************************************** */
    // DOT identifier
    public static boolean call_field(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_field")) return false;
        if (!nextTokenIs(b, DOT)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, DOT);
        r = r && identifier(b, l + 1);
        exit_section_(b, m, CALL_FIELD, r);
        return r;
    }

    /* ********************************************************** */
    // throwable? PARENTHESIS_L (term-expression (COMMA term-expression)* COMMA?)? PARENTHESIS_R
    public static boolean call_function(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_function")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CALL_FUNCTION, "<call function>");
        r = call_function_0(b, l + 1);
        r = r && consumeToken(b, PARENTHESIS_L);
        r = r && call_function_2(b, l + 1);
        r = r && consumeToken(b, PARENTHESIS_R);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // throwable?
    private static boolean call_function_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_function_0")) return false;
        throwable(b, l + 1);
        return true;
    }

    // (term-expression (COMMA term-expression)* COMMA?)?
    private static boolean call_function_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_function_2")) return false;
        call_function_2_0(b, l + 1);
        return true;
    }

    // term-expression (COMMA term-expression)* COMMA?
    private static boolean call_function_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_function_2_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = term_expression(b, l + 1);
        r = r && call_function_2_0_1(b, l + 1);
        r = r && call_function_2_0_2(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (COMMA term-expression)*
    private static boolean call_function_2_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_function_2_0_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!call_function_2_0_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "call_function_2_0_1", c)) break;
        }
        return true;
    }

    // COMMA term-expression
    private static boolean call_function_2_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_function_2_0_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && term_expression(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // COMMA?
    private static boolean call_function_2_0_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_function_2_0_2")) return false;
        consumeToken(b, COMMA);
        return true;
    }

    /* ********************************************************** */
    // DOT INTEGER
    public static boolean call_index(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_index")) return false;
        if (!nextTokenIs(b, DOT)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeTokens(b, 0, DOT, INTEGER);
        exit_section_(b, m, CALL_INDEX, r);
        return r;
    }

    /* ********************************************************** */
    // DOT identifier-free call-function
    public static boolean call_method(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_method")) return false;
        if (!nextTokenIs(b, DOT)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, DOT);
        r = r && identifier_free(b, l + 1);
        r = r && call_function(b, l + 1);
        exit_section_(b, m, CALL_METHOD, r);
        return r;
    }

    /* ********************************************************** */
    // BRACKET_L slice-term (COMMA slice-term)* BRACKET_R
    public static boolean call_slice(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_slice")) return false;
        if (!nextTokenIs(b, BRACKET_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, BRACKET_L);
        r = r && slice_term(b, l + 1);
        r = r && call_slice_2(b, l + 1);
        r = r && consumeToken(b, BRACKET_R);
        exit_section_(b, m, CALL_SLICE, r);
        return r;
    }

    // (COMMA slice-term)*
    private static boolean call_slice_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_slice_2")) return false;
        while (true) {
            int c = current_position_(b);
            if (!call_slice_2_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "call_slice_2", c)) break;
        }
        return true;
    }

    // COMMA slice-term
    private static boolean call_slice_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_slice_2_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && slice_term(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // NAME_JOIN identifier-free call-function?
    public static boolean call_static(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_static")) return false;
        if (!nextTokenIs(b, NAME_JOIN)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, NAME_JOIN);
        r = r && identifier_free(b, l + 1);
        r = r && call_static_2(b, l + 1);
        exit_section_(b, m, CALL_STATIC, r);
        return r;
    }

    // call-function?
    private static boolean call_static_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "call_static_2")) return false;
        call_function(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // KW_CATCH match-body
    public static boolean catch_expression(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "catch_expression")) return false;
        if (!nextTokenIs(b, KW_CATCH)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, CATCH_EXPRESSION, null);
        r = consumeToken(b, KW_CATCH);
        p = r; // pin = 1
        r = r && match_body(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // identifier? char-syntax
    public static boolean char_literal(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "char_literal")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CHAR_LITERAL, "<char literal>");
        r = char_literal_0(b, l + 1);
        r = r && char_syntax(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // identifier?
    private static boolean char_literal_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "char_literal_0")) return false;
        identifier(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // SINGLE_QUOTE_L STRING_TEXT+ SINGLE_QUOTE_R
    public static boolean char_syntax(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "char_syntax")) return false;
        if (!nextTokenIs(b, SINGLE_QUOTE_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, SINGLE_QUOTE_L);
        r = r && char_syntax_1(b, l + 1);
        r = r && consumeToken(b, SINGLE_QUOTE_R);
        exit_section_(b, m, CHAR_SYNTAX, r);
        return r;
    }

    // STRING_TEXT+
    private static boolean char_syntax_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "char_syntax_1")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, STRING_TEXT);
        while (r) {
            int c = current_position_(b);
            if (!consumeToken(b, STRING_TEXT)) break;
            if (!empty_element_parsed_guard_(b, "char_syntax_1", c)) break;
        }
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // PARENTHESIS_L (identifier (COMMA identifier)* COMMA?)? PARENTHESIS_R
    public static boolean closure_parameters(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "closure_parameters")) return false;
        if (!nextTokenIs(b, PARENTHESIS_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, PARENTHESIS_L);
        r = r && closure_parameters_1(b, l + 1);
        r = r && consumeToken(b, PARENTHESIS_R);
        exit_section_(b, m, CLOSURE_PARAMETERS, r);
        return r;
    }

    // (identifier (COMMA identifier)* COMMA?)?
    private static boolean closure_parameters_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "closure_parameters_1")) return false;
        closure_parameters_1_0(b, l + 1);
        return true;
    }

    // identifier (COMMA identifier)* COMMA?
    private static boolean closure_parameters_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "closure_parameters_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = identifier(b, l + 1);
        r = r && closure_parameters_1_0_1(b, l + 1);
        r = r && closure_parameters_1_0_2(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (COMMA identifier)*
    private static boolean closure_parameters_1_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "closure_parameters_1_0_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!closure_parameters_1_0_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "closure_parameters_1_0_1", c)) break;
        }
        return true;
    }

    // COMMA identifier
    private static boolean closure_parameters_1_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "closure_parameters_1_0_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && identifier(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // COMMA?
    private static boolean closure_parameters_1_0_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "closure_parameters_1_0_2")) return false;
        consumeToken(b, COMMA);
        return true;
    }

    /* ********************************************************** */
    // KW_RETURN term-expression?
    //   | KW_CONTINUE term-expression?
    //   | KW_BREAK term-expression?
    //   | KW_RAISE term-expression?
    public static boolean control_statement(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "control_statement")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, CONTROL_STATEMENT, "<control statement>");
        r = control_statement_0(b, l + 1);
        if (!r) r = control_statement_1(b, l + 1);
        if (!r) r = control_statement_2(b, l + 1);
        if (!r) r = control_statement_3(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // KW_RETURN term-expression?
    private static boolean control_statement_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "control_statement_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, KW_RETURN);
        r = r && control_statement_0_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // term-expression?
    private static boolean control_statement_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "control_statement_0_1")) return false;
        term_expression(b, l + 1);
        return true;
    }

    // KW_CONTINUE term-expression?
    private static boolean control_statement_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "control_statement_1")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, KW_CONTINUE);
        r = r && control_statement_1_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // term-expression?
    private static boolean control_statement_1_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "control_statement_1_1")) return false;
        term_expression(b, l + 1);
        return true;
    }

    // KW_BREAK term-expression?
    private static boolean control_statement_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "control_statement_2")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, KW_BREAK);
        r = r && control_statement_2_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // term-expression?
    private static boolean control_statement_2_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "control_statement_2_1")) return false;
        term_expression(b, l + 1);
        return true;
    }

    // KW_RAISE term-expression?
    private static boolean control_statement_3(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "control_statement_3")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, KW_RAISE);
        r = r && control_statement_3_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // term-expression?
    private static boolean control_statement_3_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "control_statement_3_1")) return false;
        term_expression(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // modifier* KW_ENUM identifier declare-generic? enum-body append-derive?
    public static boolean declare_enum(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_enum")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_ENUM, "<declare enum>");
        r = declare_enum_0(b, l + 1);
        r = r && consumeToken(b, KW_ENUM);
        p = r; // pin = 2
        r = r && report_error_(b, identifier(b, l + 1));
        r = p && report_error_(b, declare_enum_3(b, l + 1)) && r;
        r = p && report_error_(b, enum_body(b, l + 1)) && r;
        r = p && declare_enum_5(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // modifier*
    private static boolean declare_enum_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_enum_0")) return false;
        while (true) {
            int c = current_position_(b);
            if (!modifier(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "declare_enum_0", c)) break;
        }
        return true;
    }

    // declare-generic?
    private static boolean declare_enum_3(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_enum_3")) return false;
        declare_generic(b, l + 1);
        return true;
    }

    // append-derive?
    private static boolean declare_enum_5(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_enum_5")) return false;
        append_derive(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // KW_MUTABLE? identifier type-hint {
    // //    mixin = "com.github.bytecodealliance.language.mixin.MixinField"
    // }
    public static boolean declare_field(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_field")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_FIELD, "<declare field>");
        r = declare_field_0(b, l + 1);
        r = r && identifier(b, l + 1);
        r = r && type_hint(b, l + 1);
        r = r && declare_field_3(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // KW_MUTABLE?
    private static boolean declare_field_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_field_0")) return false;
        consumeToken(b, KW_MUTABLE);
        return true;
    }

    // {
    // //    mixin = "com.github.bytecodealliance.language.mixin.MixinField"
    // }
    private static boolean declare_field_3(PsiBuilder b, int l) {
        return true;
    }

    /* ********************************************************** */
    // modifier* function-extern? KW_FN function-name declare-generic? declare-parameters return-type? (function-body | function-inline)
    public static boolean declare_function(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_function")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DECLARE_FUNCTION, "<declare function>");
        r = declare_function_0(b, l + 1);
        r = r && declare_function_1(b, l + 1);
        r = r && consumeToken(b, KW_FN);
        r = r && function_name(b, l + 1);
        p = r; // pin = 4
        r = r && report_error_(b, declare_function_4(b, l + 1));
        r = p && report_error_(b, declare_parameters(b, l + 1)) && r;
        r = p && report_error_(b, declare_function_6(b, l + 1)) && r;
        r = p && declare_function_7(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // modifier*
    private static boolean declare_function_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_function_0")) return false;
        while (true) {
            int c = current_position_(b);
            if (!modifier(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "declare_function_0", c)) break;
        }
        return true;
    }

    // function-extern?
    private static boolean declare_function_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_function_1")) return false;
        function_extern(b, l + 1);
        return true;
    }

    // declare-generic?
    private static boolean declare_function_4(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "declare_function_4")) return false;
        declare_generic(b, l + 1);
        return true;
    }
